# tech-market-analyzer

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  This project requires a combination of W.md  pyproject.toml
.github/workflows/: ci.yml
config/: technologies.yaml
docs/: architecture.md
src/tech_market_analyzer/: __init__.py  _paths.py  cli.py  settings.py
src/tech_market_analyzer/analysis/: __init__.py  engagement.py  history.py  nlp_analyzer.py  runner.py  technology_counter.py  visualizer.py
src/tech_market_analyzer/domain/: __init__.py  interfaces.py  models.py
src/tech_market_analyzer/scraping/: __init__.py  async_base.py  async_dou_scraper.py  base.py  dou_scraper.py  dou_urls.py  parsers.py  runner.py
src/tech_market_analyzer/storage/: __init__.py  json_storage.py  results_storage.py
tests/: __init__.py  test_async_base.py  test_dou_scraper.py  test_engagement.py  test_integration.py  test_nlp_analyzer.py  test_parsers.py  test_storage.py  test_technology_counter.py
tests/fixtures/: dou_listing_real.html  junior_snapshot.json  sample_dou.html
