[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tech-market-analyzer"
version = "0.1.0"
description = "Scrape Python job vacancies and analyze demanded technologies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
async = [
    "aiohttp>=3.9.0",
]
nlp = [
    "nltk>=3.8.0",
    "wordcloud>=1.9.0",
]
bonus = [
    "aiohttp>=3.9.0",
    "nltk>=3.8.0",
    "wordcloud>=1.9.0",
]

[project.scripts]
tech-analyzer = "tech_market_analyzer.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["tech_market_analyzer"]

[tool.hatch.build.targets.wheel.force-include]
"src/tech_market_analyzer" = "tech_market_analyzer"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
